--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
             <version>2.7.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>0.25.0.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 
 
